# qu_guru

./: .env  .gitignore  README.md  lesson_4.py  pyproject.toml  requirements.txt  test_lesson_2.py  test_lesson_6.py
allure-results/: 02ef0199-1509-4c7b-943d-20d34df15faa-attachment.txt  0e22cc13-6afa-4a04-8758-bd132047e03b-container.json  1c5b3049-b72e-4a5c-85a7-eefe3e3fec16-container.json  34327c58-9449-42db-a9d0-196b5a5e3b11-result.json  388acd47-3c01-467a-8d00-7874e6dbc2b9-container.json  38ea21b9-a0e8-4dec-8dc7-a21706d4e77f-attachment.txt  4bab0660-046a-45d0-9a8a-26f54cbaac8b-result.json  4be606c4-7188-448f-8482-1d97019c51ff-attachment.html  54bf66d6-96dc-4f18-97e3-f1ae8dd7af9a-result.json  5ab76284-d33f-4f5d-8abd-a9ef0a342d6a-attachment.txt  5f4edb9e-caad-490d-98fa-5dde437720da-attachment.html  65cbdd1f-aca6-4493-8a37-214cc0f66606-attachment.html  687a379d-ac5b-42cc-a88f-a9532c57b956-result.json  77ceca2a-bd4d-4bb8-819d-76bc472d6ec8-container.json  7b17a9d1-f4bb-45f6-8199-351905cf1f37-attachment.html  7f31d4fd-b614-4a72-8f36-d59d23a05e33-container.json  8b25cc67-8110-454c-8238-bee392fb5875-container.json  8e199925-a15f-435c-8c2f-1b0a64fd919c-result.json  977b3b2c-c552-41a5-afe7-ca94d2fc580d-container.json  a43f3408-d24c-4f4f-a8a4-e5e95353cb4a-container.json  ad6429be-75ed-48ea-a902-fc9511856025-container.json  b3921604-ddeb-49c4-bc67-3f8df81bf033-attachment.html  c4164f3d-5c3b-4e55-a617-37e166a52a6c-container.json  d0915680-e80c-4e3d-a60d-b7afd3cd001d-container.json  d9946a0d-b42a-4d15-ba1c-4d71c1c130f8-result.json  dba253aa-51e3-4e8f-8fb2-27e461076a57-attachment.html  (+3 more)
(+31 files in other folders)
